tests/valid/binary_operators/sub_neg.rs
/*
return: 3
*/

main(): i32 {
    return 2 - -1;
}