tests/invalid/binary_operators/malformed_paren.rs
/*
fail: 1
*/

main(): int {
    return 2 (- 3);
}